finalized, fixing position, adjusting fonts and box making it see clearer.
(hopefully the background img is fine for now, cant find the original auther)

--- a/index.html
+++ b/index.html
@@ -30,39 +30,42 @@
             <div class="fonts">\\ Countdown //</div>
         </div>
 
-        <div class="countdown-timer">
-            <div class="days-timer">
-                <div id="days-num"></div>
+
+        <div class="countdown">
+            <div class="countdown-timer">
+                <div class="days-timer">
+                    <div id="days-num"></div>
+                </div>
+
+                <div class="hours-timer">
+                    <div id="hours-num"></div>
+                </div>
+
+                <div class="mins-timer">
+                    <div id="mins-num"></div>
+                </div>
+
+                <div class="secs-timer">
+                    <div id="secs-num"></div>
+                </div>
             </div>
 
-            <div class="hours-timer">
-                <div id="hours-num"></div>
-            </div>
+            <div class="countdown-text">
+                <div class="days-timer">
+                    <div class="days">Days</div>
+                </div>
 
-            <div class="mins-timer">
-                <div id="mins-num"></div>
-            </div>
+                <div class="hours-timer">
+                    <div class="hours">Hours</div>
+                </div>
 
-            <div class="secs-timer">
-                <div id="secs-num"></div>
-            </div>
-        </div>
+                <div class="mins-timer">
+                    <div class="mins">Mins</div>
+                </div>
 
-        <div class="countdown-text">
-            <div class="days-timer">
-                <div class="days">Days</div>
-            </div>
-
-            <div class="hours-timer">
-                <div class="hours">Hours</div>
-            </div>
-
-            <div class="mins-timer">
-                <div class="mins">Mins</div>
-            </div>
-
-            <div class="secs-timer">
-                <div class="secs">Secs</div>
+                <div class="secs-timer">
+                    <div class="secs">Secs</div>
+                </div>
             </div>
         </div>
 
