made my own background to avoid any copyrighten issue.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
             <div class="countdown-text">
                 <div class="days-timer">
-                    <div class="days">Days</div>
+                    <div class="days">Day</div>
                 </div>
 
                 <div class="hours-timer">
